apps/homarr/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: dashboard
  labels:
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: homarr
      app.kubernetes.io/instance: homarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homarr
        app.kubernetes.io/instance: homarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: node06
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:v2.2.0
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: websocket
              containerPort: 3001
              protocol: TCP
            - name: nginx
              containerPort: 7575
              protocol: TCP
          volumeMounts:
            - name: homarr-database
              mountPath: /appdata
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
      volumes:
        - name: homarr-database
          persistentVolumeClaim:
            claimName: homarr-database
---
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: dashboard
  labels:
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
spec:
  type: NodePort
  ports:
    - name: app
      port: 7575
      protocol: TCP
      targetPort: 7575
      nodePort: 31880
  selector:
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
